# Freq2Trans

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: A_Dirichlet_run.ipynb  B_PML.ipynb  B_PML_tuning_project.ipynb  B_Pml_setup_tune.ipynb  C-rhs.ipynb  C_Rhs.ipynb  D_dataset_0702.ipynb  D_dataset_new.ipynb  E_create_paired_omega2_dataset_amended.ipynb  E_dataset_generation_1src_50_5_5.ipynb  F_Dataset_res-to-error.ipynb  PML_Debug_Tuning_Project_Complete.ipynb  PML_OuterCollar_Debug_Tuning_Improved.ipynb  __init__.py  basistest.ipynb  matlabtest.ipynb  pml_tuning.ipynb  res_data.ipynb  run_baseline.py  run_smoke.py  setup.ipynb  testing yolo pml.ipynb  transfer.ipynb
experiments/data/D_outercollar_1src/: manifest_test.jsonl  manifest_train.jsonl  manifest_val.jsonl
experiments/data/D_outercollar_rand1to5/: manifest_test.jsonl  manifest_train.jsonl  manifest_val.jsonl
experiments/data/D_outercollar_rand1to5_200_20_20/: manifest_test.jsonl  manifest_train.jsonl  manifest_val.jsonl
experiments/data/paired_omega2_dataset/: index.csv
numerics/: __init__.py  assemble.py  cases.py  config.py  diagnostics.py  grid.py  iterative_refinement.py  medium.py  pml.py  refinement.py  rhs.py  solve.py  transfer.py
src/: __init__.py  diagnostics.py
src/algorithm/: __init__.py  dataset.py  grid_refinement.py  iterative_refinement.py  transfer.py
src/core/: __init__.py  cases.py  config.py  grid.py  medium.py  resolution.py  rhs.py
src/operators/: __init__.py  assemble.py  pml.py  solve.py
tests/: test_smoke.py
